--- a/tox.ini
+++ b/tox.ini
@@ -1,108 +1,166 @@
-##
-# File:  tox.ini
-# Date: 17-Aug-2017 jdw
+# File: tox.ini (Templated version)
+# Updated:  3-Jul-2019 jdw Cleanup
+#           8-Jul-2019 jdw Disable flake8 plugin (pydocstyle compat issue)
+#          11-Jul-2019 jdw Add placeholders for up to three test paths
 #
-# Updates:
-#   9-Aug-2018 jdw adjust path before performing tests to avoid path conflicts
-#   9-Aug-2018 jdw disabled coverage tests for the moment
-#  26-Aug-2018 jdw resolve the path shadowing problem with coverage.
-#  28-Jan-2019 jdw retire Py 3.6 tests
-#   5-Jun-2019 jdw change test naming convention
-#  25-Jun-2019 jdw change workflow (black/pylint)
-#   1-Jul-2019 jdw make linting, formatting and coverage py37 only
+[local_settings]
+# project specific local settings
+test_pattern = "test*.py"
+#
+# Source pathls (space separated list of files/directories) for linting and format checks
+source_paths = "mmcif setup.py"
+#
+# Start directory path for test discovery
+# Each path must reference valid directory that is searchable by Python (i.e. contains __init__.py)
+#  ** It is harmless to point to paths containing no tests.
+#
+test_path_1 = "mmcif/tests"
+# These are placeholders valid source directories without tests files
+test_path_2 = "mmcif/api"
+test_path_3 = "mmcif/api"
+#
+# Comma separate list of directories for which test coverage will be evaluated
+coverage_source_paths = "mmcif/io,mmcif/api,mmcif/tests"
+coverage_cutoff = 65
+#
+## --------------------------------------------------------------------------
+##  ----------   No project specific setting beyond this point --------------
 ##
 [tox]
-envlist = py37-pylint, py37-flake8, py37-formatting, py{37,27}, py37-coverage
+# The complete list of supported test environments to setup and invoke
+envlist = format_pep8-{linux,macos}-{py37}, lint_pylint-{linux,macos}-{py37}, format_black-{linux,macos}-{py37}, py{37,27}, test_coverage-{linux,macos}-{py37}
 #
-skip_missing_interpreters = True
-skip_install = False
-skipsdist = False
-alwayscopy = True
+minversion = 3.4.0
+skip_missing_interpreters = true
 
+skipsdist = true
 
 [testenv]
+whitelist_externals = echo
+lsdeps = echo
+commands =
+    echo "Starting default tests in testenv"
+
+[testenv:py27]
+description = 'Run unit tests (unittest runner) using {envpython}'
+whitelist_externals = echo
 platform=
        macos: darwin
        linux: linux
 basepython =
     py27: python2.7
-    py37: python3.7
-
-whitelist_externals = echo
-recreate = True
-
-# Change from the top directory (holding tox.ini) to the directory containing test files
-# avoiding path conflicts for imports with the development source tree.
-#
-changedir = mmcif/tests
-deps = echo
-commands =
-    echo "++++++ Starting tests ++++++++ "
-    {envpython} -V
-    {envpython} -m unittest discover -v --start-directory . --pattern "test*.py"
-    echo "++++++ Completed tests ++++++++ "
-
-
-
-#
-[testenv:py37-pylint]
-whitelist_externals = echo
-basepython = py37: python3.7
 skip_install = false
-deps =
-    echo
-    pylint
+deps = echo
+       -r requirements.txt
 commands =
-    echo "Begin linting"
-    pylint --disable=R,C --reports=n --rcfile={toxinidir}/pylintrc  mmcif
-    echo "Completed linting"
+    echo "Starting {envname}"
+    {envpython} -V
+    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_1} --pattern "{[local_settings]test_pattern}"
+    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_2} --pattern "{[local_settings]test_pattern}"
+    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_3} --pattern "{[local_settings]test_pattern}"
+    echo "Completed {envname}"
+
+[testenv:py37]
+description = 'Run unit tests (unittest runner) using {envpython}'
+whitelist_externals = echo
+platform=
+       macos: darwin
+       linux: linux
+basepython =
+    py37: python3.7
+skip_install = false
+deps = echo
+       -r requirements.txt
+
+commands =
+    echo "Starting {envname}"
+    {envpython} -V
+    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_1} --pattern "{[local_settings]test_pattern}"
+    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_2} --pattern "{[local_settings]test_pattern}"
+    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_3} --pattern "{[local_settings]test_pattern}"
+    echo "Completed {envname}"
 
 #
-[testenv:py37-formatting]
-whitelist_externals = echo
-basepython = py37: python3.7
-deps =
-    echo
-    black>=19.3b0
-#    isort>=4.3.20
-commands =
-    echo "Begin format check"
-    black --version
-    black --line-length 180 --check  mmcif
-#    isort -rc mmcif --check-only
-    echo "Completed format check"
-changedir = {toxinidir}
-
-[testenv:py37-flake8]
-whitelist_externals = echo
-basepython = py37: python3.7
-skip_install = true
-deps =
-    echo
-    flake8
-    flake8-docstrings>=0.2.7
-    flake8-import-order>=0.9
-commands =
-    # Exceptions: D for docstrings, I for imports order and formatting, E302 is slice spacing  - W503 multiline spacing incompatible with black
-    flake8 --max-line-length=185 --ignore=D,I,E203,W503  --exclude=mmcif/modules/,mmcif/scripts,mmcif/io/__init__.py,mmcif/api/__init__.py mmcif/ setup.py
-#
-[testenv:py37-coverage]
+[testenv:format_pep8]
+description = 'Run selected PEP8 compliance checks (flake8)'
+platform=
+       macos: darwin
+       linux: linux
 whitelist_externals = echo
 basepython = py37: python3.7
 #skip_install = true
 deps =
     echo
-    coverage
-# To avoid path shadowing the git repo and the installed virtual env in tox
-# use {toxinidir} in the coverage commands to locate the test code.
-changedir = {envtmpdir}
+    flake8
+    # This plugin is no longer compatible with latest pydocstyles -
+    # flake8-docstrings>=0.2.7
+    flake8-import-order>=0.9
+    -r requirements.txt
 commands =
-    echo "Evaluating coverage"
-    {envpython} -V
+    # Exceptions: D for docstrings, I for imports order and formatting, E302 is slice spacing  - W503 multiline spacing incompatible with black
+    flake8 --max-line-length=185 --ignore=D,I,E203,W503  {[local_settings]source_paths}
+
+#
+[testenv:lint_pylint]
+description = 'Run linting compliance checks (pylint)'
+platform=
+       macos: darwin
+       linux: linux
+whitelist_externals = echo
+basepython = py37: python3.7
+#skip_install = true
+deps =
+    echo
+    pylint
+    -r requirements.txt
+commands =
+    echo "Starting {envname}"
+    pylint --disable=R,C --reports=n --rcfile={toxinidir}/pylintrc  {[local_settings]source_paths}
+    echo "Completed {envname}"
+
+#
+[testenv:format_black]
+description = 'Run format compliance checks (black)'
+platform=
+       macos: darwin
+       linux: linux
+whitelist_externals = echo
+basepython = py37: python3.7
+deps =
+    echo
+    black>=19.3b0
+    -r requirements.txt
+    #    isort>=4.3.20
+commands =
+    echo "Starting {envname}"
+    black --check --line-length 180  {[local_settings]source_paths}
+    #    isort -rc rcsb/utils --check-only
+    echo "Completed {envname}"
+#changedir = {toxinidir}
+
+#
+[testenv:test_coverage-py37]
+description = 'Run test coverage analysis'
+platform=
+       macos: darwin
+       linux: linux
+whitelist_externals = echo
+basepython = py37: python3.7
+deps =
+    echo
+    coverage
+    -r requirements.txt
+
+commands =
+    echo "Starting {envname}"
     coverage erase
-    coverage run --parallel-mode --omit="{toxinidir}/mmcif/tests/*","{toxinidir}mmcif/schema/*","{toxinidir}/mmcif/scripts/*" --source mmcif -m unittest discover  --start-directory {toxinidir}/mmcif/tests --pattern "test*.py"
+    coverage run --parallel-mode  --source="{[local_settings]coverage_source_paths}" -m unittest discover -v --start-directory  {[local_settings]test_path_1} --pattern "{[local_settings]test_pattern}"
+    coverage run --parallel-mode  --source="{[local_settings]coverage_source_paths}" -m unittest discover -v --start-directory  {[local_settings]test_path_2} --pattern "{[local_settings]test_pattern}"
+    coverage run --parallel-mode  --source="{[local_settings]coverage_source_paths}" -m unittest discover -v --start-directory  {[local_settings]test_path_3} --pattern "{[local_settings]test_pattern}"
+    echo " ------- Consolidating {envname} data ----------"
     coverage combine
-        coverage report --omit="{toxinidir}/mmcif/tests*","{toxinidir}/mmcif/modules/*","{toxinidir}/mmcif/scripts/*"   --show-missing --fail-under=50
-    - coverage html
-    echo "Done with coverage"
-    #
+    echo " ------- Building {envname} reports ----------"
+    coverage report --fail-under={[local_settings]coverage_cutoff}
+    - coverage xml
+    echo "Completed {envname}"
+#
