--- a/tox.ini
+++ b/tox.ini
@@ -7,8 +7,8 @@
 # project specific local settings
 test_pattern = "test*.py"
 #
-# Source pathls (space separated list of files/directories) for linting and format checks
-source_paths = "mmcif setup.py"
+# Source pathls (unquoted space separated list of files/directories) for linting and format checks
+source_paths = mmcif/ setup.py
 #
 # Start directory path for test discovery
 # Each path must reference valid directory that is searchable by Python (i.e. contains __init__.py)
@@ -28,12 +28,11 @@ coverage_cutoff = 65
 ##
 [tox]
 # The complete list of supported test environments to setup and invoke
-envlist = format_pep8-{linux,macos}-{py37}, lint_pylint-{linux,macos}-{py37}, format_black-{linux,macos}-{py37}, py{37,27}, test_coverage-{linux,macos}-{py37}
+envlist = format_pep8-{py37}, lint_pylint-{py37}, format_black-{py37}, py{37,27}, test_coverage-{py37}
 #
 minversion = 3.4.0
 skip_missing_interpreters = true
-
-skipsdist = true
+skipsdist = false
 
 [testenv]
 whitelist_externals = echo
@@ -81,7 +80,7 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:format_pep8]
+[testenv:format_pep8-py37]
 description = 'Run selected PEP8 compliance checks (flake8)'
 platform=
        macos: darwin
@@ -101,7 +100,7 @@ commands =
     flake8 --max-line-length=185 --ignore=D,I,E203,W503  {[local_settings]source_paths}
 
 #
-[testenv:lint_pylint]
+[testenv:lint_pylint-py37]
 description = 'Run linting compliance checks (pylint)'
 platform=
        macos: darwin
@@ -119,7 +118,7 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:format_black]
+[testenv:format_black-py37]
 description = 'Run format compliance checks (black)'
 platform=
        macos: darwin
