--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,7 @@ skipsdist = false
 
 [testenv]
 whitelist_externals = echo
-lsdeps = echo
+deps = echo
 commands =
     echo "Starting default tests in testenv"
 
@@ -49,6 +49,7 @@ platform=
 basepython =
     py27: python2.7
 skip_install = false
+recreate = true
 deps = echo
        -r requirements.txt
 commands =
@@ -68,9 +69,9 @@ platform=
 basepython =
     py37: python3.7
 skip_install = false
+recreate = true
 deps = echo
        -r requirements.txt
-
 commands =
     echo "Starting {envname}"
     {envpython} -V
@@ -145,6 +146,7 @@ platform=
        linux: linux
 whitelist_externals = echo
 basepython = py37: python3.7
+recreate = true
 deps =
     echo
     coverage
