Ensure install extension before test.

--- a/tox.ini
+++ b/tox.ini
@@ -50,6 +50,8 @@ basepython =
     py27: python2.7
 skip_install = false
 recreate = true
+alwayscopy=true
+usedevelop=true
 deps = echo
        -r requirements.txt
 commands =
@@ -70,6 +72,8 @@ basepython =
     py37: python3.7
 skip_install = false
 recreate = true
+alwayscopy=true
+usedevelop=true
 deps = echo
        -r requirements.txt
 commands =
@@ -88,7 +92,6 @@ platform=
        linux: linux
 whitelist_externals = echo
 basepython = py37: python3.7
-#skip_install = true
 deps =
     echo
     flake8
@@ -108,7 +111,7 @@ platform=
        linux: linux
 whitelist_externals = echo
 basepython = py37: python3.7
-#skip_install = true
+
 deps =
     echo
     pylint
@@ -136,7 +139,6 @@ commands =
     black --check --line-length 180  {[local_settings]source_paths}
     #    isort -rc rcsb/utils --check-only
     echo "Completed {envname}"
-#changedir = {toxinidir}
 
 #
 [testenv:test_coverage-py37]
@@ -147,6 +149,8 @@ platform=
 whitelist_externals = echo
 basepython = py37: python3.7
 recreate = true
+alwayscopy=true
+usedevelop=true
 deps =
     echo
     coverage
