--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,4 @@
 # File: tox.ini (Templated version)
-# Updated:  3-Jul-2019 jdw Cleanup
-#           8-Jul-2019 jdw Disable flake8 plugin (pydocstyle compat issue)
-#          11-Jul-2019 jdw Add placeholders for up to three test paths
 #
 [local_settings]
 # project specific local settings
@@ -18,13 +15,19 @@ test_path_1 = "mmcif/tests"
 # These are placeholders valid source directories without tests files
 test_path_2 = "mmcif/api"
 test_path_3 = "mmcif/api"
+test_path_4 = "mmcif/api"
 #
 # Comma separate list of directories for which test coverage will be evaluated
 coverage_source_paths = "mmcif/io,mmcif/api,mmcif/tests"
+coverage_exclude_paths = "mmcif/__init__.py"
 coverage_cutoff = 60
 #
 ## --------------------------------------------------------------------------
 ##  ----------   No project specific setting beyond this point --------------
+# Updated:  3-Jul-2019 jdw Cleanup
+#           8-Jul-2019 jdw Disable flake8 plugin (pydocstyle compat issue)
+#          12-Jul-2019 jdw Add placeholders for up to four test paths
+#          13-Jul-2019 jdw Add coverage exclusion
 ##
 [tox]
 # The complete list of supported test environments to setup and invoke
@@ -60,6 +63,7 @@ commands =
     {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_1} --pattern "{[local_settings]test_pattern}"
     {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_2} --pattern "{[local_settings]test_pattern}"
     {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_3} --pattern "{[local_settings]test_pattern}"
+    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_4} --pattern "{[local_settings]test_pattern}"
     echo "Completed {envname}"
 
 [testenv:py37]
@@ -82,6 +86,7 @@ commands =
     {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_1} --pattern "{[local_settings]test_pattern}"
     {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_2} --pattern "{[local_settings]test_pattern}"
     {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_3} --pattern "{[local_settings]test_pattern}"
+    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_4} --pattern "{[local_settings]test_pattern}"
     echo "Completed {envname}"
 
 #
@@ -159,13 +164,13 @@ deps =
 commands =
     echo "Starting {envname}"
     coverage erase
-    coverage run --parallel-mode  --source="{[local_settings]coverage_source_paths}" -m unittest discover -v --start-directory  {[local_settings]test_path_1} --pattern "{[local_settings]test_pattern}"
-    coverage run --parallel-mode  --source="{[local_settings]coverage_source_paths}" -m unittest discover -v --start-directory  {[local_settings]test_path_2} --pattern "{[local_settings]test_pattern}"
-    coverage run --parallel-mode  --source="{[local_settings]coverage_source_paths}" -m unittest discover -v --start-directory  {[local_settings]test_path_3} --pattern "{[local_settings]test_pattern}"
-    echo " ------- Consolidating {envname} data ----------"
+    coverage run --parallel-mode --omit="{[local_settings]coverage_exclude_paths}" --source="{[local_settings]coverage_source_paths}" -m unittest discover -v --start-directory  {[local_settings]test_path_1} --pattern "{[local_settings]test_pattern}"
+    coverage run --parallel-mode --omit="{[local_settings]coverage_exclude_paths}"  --source="{[local_settings]coverage_source_paths}" -m unittest discover -v --start-directory  {[local_settings]test_path_2} --pattern "{[local_settings]test_pattern}"
+    coverage run --parallel-mode --omit="{[local_settings]coverage_exclude_paths}"  --source="{[local_settings]coverage_source_paths}" -m unittest discover -v --start-directory  {[local_settings]test_path_3} --pattern "{[local_settings]test_pattern}"
+    coverage run --parallel-mode --omit="{[local_settings]coverage_exclude_paths}"  --source="{[local_settings]coverage_source_paths}" -m unittest discover -v --start-directory  {[local_settings]test_path_4} --pattern "{[local_settings]test_pattern}"
+     echo " ------- Consolidating {envname} data ----------"
     coverage combine
     echo " ------- Building {envname} reports ----------"
     coverage report --fail-under={[local_settings]coverage_cutoff}
     - coverage xml
     echo "Completed {envname}"
-#
