V048 - Exclude setup.py to avoid odd pylint crash.

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,8 @@
 test_pattern = "test*.py"
 #
 # Source pathls (unquoted space separated list of files/directories) for linting and format checks
-source_paths = mmcif/ setup.py
+#source_paths = mmcif/ setup.py
+source_paths = mmcif/
 #
 # Start directory path for test discovery
 # Each path must reference valid directory that is searchable by Python (i.e. contains __init__.py)
