--- a/tox.ini
+++ b/tox.ini
@@ -25,15 +25,17 @@ coverage_exclude_paths = "mmcif/__init__.py"
 coverage_cutoff = 60
 #
 ## --------------------------------------------------------------------------
+## --------------------------------------------------------------------------
 ##  ----------   No project specific setting beyond this point --------------
 # Updated:  3-Jul-2019 jdw Cleanup
 #           8-Jul-2019 jdw Disable flake8 plugin (pydocstyle compat issue)
 #          12-Jul-2019 jdw Add placeholders for up to four test paths
 #          13-Jul-2019 jdw Add coverage exclusion
+#          21-Nov-2019 jdw py27->py38 update black version
 ##
 [tox]
 # The complete list of supported test environments to setup and invoke
-envlist = format_pep8-{py37}, lint_pylint-{py37}, format_black-{py37}, py{37,27}, test_coverage-{py37}
+envlist = format_pep8-{py38}, lint_pylint-{py38}, format_black-{py38}, py{38,27}, test_coverage-{py38}
 #
 minversion = 3.4.0
 skip_missing_interpreters = true
@@ -52,8 +54,7 @@ whitelist_externals = echo
 platform=
        macos: darwin
        linux: linux
-basepython =
-    py27: python2.7
+basepython =  py27: python2.7
 skip_install = false
 recreate = true
 alwayscopy=true
@@ -69,14 +70,13 @@ commands =
     {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_4} --pattern "{[local_settings]test_pattern}"
     echo "Completed {envname}"
 
-[testenv:py37]
+[testenv:py38]
 description = 'Run unit tests (unittest runner) using {envpython}'
 whitelist_externals = echo
 platform=
        macos: darwin
        linux: linux
-basepython =
-    py37: python3.7
+basepython = py38: python3.8
 skip_install = false
 recreate = true
 alwayscopy=true
@@ -93,13 +93,13 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:format_pep8-py37]
+[testenv:format_pep8-py38]
 description = 'Run selected PEP8 compliance checks (flake8)'
 platform=
        macos: darwin
        linux: linux
 whitelist_externals = echo
-basepython = py37: python3.7
+basepython = py38: python3.8
 deps =
     echo
     flake8
@@ -112,13 +112,13 @@ commands =
     flake8 --max-line-length=185 --ignore=D,I,E203,W503  {[local_settings]source_paths}
 
 #
-[testenv:lint_pylint-py37]
+[testenv:lint_pylint-py38]
 description = 'Run linting compliance checks (pylint)'
 platform=
        macos: darwin
        linux: linux
 whitelist_externals = echo
-basepython = py37: python3.7
+basepython3.8 = py38: python3.8
 
 deps =
     echo
@@ -130,16 +130,16 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:format_black-py37]
+[testenv:format_black-py38]
 description = 'Run format compliance checks (black)'
 platform=
        macos: darwin
        linux: linux
 whitelist_externals = echo
-basepython = py37: python3.7
+basepython3.8 = py38: python3.8
 deps =
     echo
-    black>=19.3b0
+    black>=19.10b0
     -r requirements.txt
     #    isort>=4.3.20
 commands =
@@ -149,13 +149,13 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:test_coverage-py37]
+[testenv:test_coverage-py38]
 description = 'Run test coverage analysis'
 platform=
        macos: darwin
        linux: linux
 whitelist_externals = echo
-basepython = py37: python3.7
+basepython = py38: python3.8
 recreate = true
 alwayscopy=true
 usedevelop=true
