Adjustments to tox runner

--- a/tox.ini
+++ b/tox.ini
@@ -45,6 +45,7 @@ skipsdist = false
 passenv = CONFIG_SUPPORT_TOKEN_ENV
 whitelist_externals = echo
 deps = echo
+skipsdist = false
 commands =
     echo "Starting default tests in testenv"
 
@@ -56,6 +57,7 @@ platform=
        linux: linux
 basepython =  py27: python2.7
 skip_install = false
+skipsdist = false
 recreate = true
 alwayscopy=true
 usedevelop=true
@@ -81,6 +83,7 @@ skip_install = false
 recreate = true
 alwayscopy=true
 usedevelop=true
+skipsdist = false
 deps = echo
        -r requirements.txt
 commands =
@@ -159,6 +162,7 @@ basepython = py38: python3.8
 recreate = true
 alwayscopy=true
 usedevelop=true
+skipsdist = false
 deps =
     echo
     coverage
