More pipeline adjustments -

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,9 +27,9 @@ add_subdirectory("modules/pybind11")
 #
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-IF(NOT DEFINED ENV{RUN_FROM_DISUTILS})
-    set(CMAKE_VERBOSE_MAKEFILE ON)
-ENDIF()
+#IF(NOT DEFINED ENV{RUN_FROM_DISUTILS})
+#    set(CMAKE_VERBOSE_MAKEFILE ON)
+#ENDIF()
 #
 #
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
