V060 - Advance pipeline to py39 add DDL category.NX_mapping_details

--- a/azure-template-tox-job.yml
+++ b/azure-template-tox-job.yml
@@ -130,21 +130,26 @@ jobs:
           export CONFIG_SUPPORT_TOKEN_ENV=$(VAR_CONFIG_SUPPORT_TOKEN_ENV)
           ${{ format('python -m tox -vvvv -e {0}', parameters.tox) }}
         displayName: 'Running tox task'
+    - ${{ if and(not(startsWith(parameters.tox, 'py')), startsWith(parameters.python, '3.9')) }}:
+      - script: |
+          export CONFIG_SUPPORT_TOKEN_ENV=$(VAR_CONFIG_SUPPORT_TOKEN_ENV)
+          ${{ format('python -m tox -vvvv -e {0}-py39', parameters.tox) }}
+        displayName: 'Running tox task for py39'
     - ${{ if and(not(startsWith(parameters.tox, 'py')), startsWith(parameters.python, '3.8')) }}:
       - script: |
           export CONFIG_SUPPORT_TOKEN_ENV=$(VAR_CONFIG_SUPPORT_TOKEN_ENV)
           ${{ format('python -m tox -vvvv -e {0}-py38', parameters.tox) }}
-        displayName: 'Running tox task'
+        displayName: 'Running tox task for py38'
     - ${{ if and(not(startsWith(parameters.tox, 'py')), startsWith(parameters.python, '3.7')) }}:
       - script: |
           export CONFIG_SUPPORT_TOKEN_ENV=$(VAR_CONFIG_SUPPORT_TOKEN_ENV)
           ${{ format('python -m tox -vvvv -e {0}-py37', parameters.tox) }}
-        displayName: 'Running tox task'
+        displayName: 'Running tox task for py37'
     - ${{ if and(not(startsWith(parameters.tox, 'py')), startsWith(parameters.python, '2.7')) }}:
       - script: |
           export CONFIG_SUPPORT_TOKEN_ENV=$(VAR_CONFIG_SUPPORT_TOKEN_ENV)
           ${{ format('python -m tox -vvvv -e {0}-py27', parameters.tox) }}
-        displayName: 'Runing tox task'
+        displayName: 'Runing tox task for py27'
     #
     #  Build artifacts if this is a test target (i.e. labeled as py##)
     #
