--- a/tox.ini
+++ b/tox.ini
@@ -32,10 +32,11 @@ coverage_cutoff = 60
 #          12-Jul-2019 jdw Add placeholders for up to four test paths
 #          13-Jul-2019 jdw Add coverage exclusion
 #          21-Nov-2019 jdw py27->py38 update black version
+#           1-Jan-2021 jdw py38->py39
 ##
 [tox]
 # The complete list of supported test environments to setup and invoke
-envlist = format_pep8-{py38}, lint_pylint-{py38}, format_black-{py38}, py{38,27}, test_coverage-{py38}
+envlist = format_pep8-{py39}, lint_pylint-{py39}, format_black-{py39}, py{38,27}, test_coverage-{py39}
 #
 #
 minversion = 3.4.15
@@ -73,13 +74,13 @@ commands =
     {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_4} --pattern "{[local_settings]test_pattern}"
     echo "Completed {envname}"
 
-[testenv:py38]
+[testenv:py39]
 description = 'Run unit tests (unittest runner) using {envpython}'
 whitelist_externals = echo
 platform=
        macos: darwin
        linux: linux
-basepython = py38: python3.8
+basepython = py39: python3.9
 skip_install = false
 recreate = true
 alwayscopy=true
@@ -97,13 +98,13 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:format_pep8-py38]
+[testenv:format_pep8-py39]
 description = 'Run selected PEP8 compliance checks (flake8)'
 platform=
        macos: darwin
        linux: linux
 whitelist_externals = echo
-basepython = py38: python3.8
+basepython = py39: python3.9
 deps =
     echo
     flake8
@@ -116,13 +117,13 @@ commands =
     flake8 --max-line-length=185 --ignore=D,I,E203,W503  {[local_settings]source_paths}
 
 #
-[testenv:lint_pylint-py38]
+[testenv:lint_pylint-py39]
 description = 'Run linting compliance checks (pylint)'
 platform=
        macos: darwin
        linux: linux
 whitelist_externals = echo
-basepython3.8 = py38: python3.8
+basepython = py39: python3.9
 
 deps =
     echo
@@ -134,13 +135,13 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:format_black-py38]
+[testenv:format_black-py39]
 description = 'Run format compliance checks (black)'
 platform=
        macos: darwin
        linux: linux
 whitelist_externals = echo
-basepython3.8 = py38: python3.8
+basepython = py39: python3.9
 deps =
     echo
     black>=19.10b0
@@ -153,13 +154,13 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:test_coverage-py38]
+[testenv:test_coverage-py39]
 description = 'Run test coverage analysis'
 platform=
        macos: darwin
        linux: linux
 whitelist_externals = echo
-basepython = py38: python3.8
+basepython = py39: python3.9
 recreate = true
 alwayscopy=true
 usedevelop=true
