--- a/tox.ini
+++ b/tox.ini
@@ -57,7 +57,7 @@ whitelist_externals = echo
 platform=
        macos: darwin
        linux: linux
-basepython =  py27: python2.7
+basepython =  python2.7
 skip_install = false
 skipsdist = false
 recreate = true
@@ -80,7 +80,7 @@ whitelist_externals = echo
 platform=
        macos: darwin
        linux: linux
-basepython = py39: python3.9
+basepython = python3.9
 skip_install = false
 recreate = true
 alwayscopy=true
@@ -104,7 +104,7 @@ platform=
        macos: darwin
        linux: linux
 whitelist_externals = echo
-basepython = py39: python3.9
+basepython = python3.9
 deps =
     echo
     flake8
@@ -123,7 +123,7 @@ platform=
        macos: darwin
        linux: linux
 whitelist_externals = echo
-basepython = py39: python3.9
+basepython = python3.9
 
 deps =
     echo
@@ -141,15 +141,15 @@ platform=
        macos: darwin
        linux: linux
 whitelist_externals = echo
-basepython = py39: python3.9
+basepython = python3.9
 deps =
     echo
-    black>=20.8b1
+    black>=21.5b1
     -r requirements.txt
     #    isort>=4.3.20
 commands =
     echo "Starting {envname}"
-    black --check --line-length 180  {[local_settings]source_paths}
+    black --check --line-length 185  {[local_settings]source_paths}
     #    isort -rc rcsb/utils --check-only
     echo "Completed {envname}"
 
@@ -160,7 +160,7 @@ platform=
        macos: darwin
        linux: linux
 whitelist_externals = echo
-basepython = py39: python3.9
+basepython = python3.9
 recreate = true
 alwayscopy=true
 usedevelop=true
