--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,45 +8,45 @@
 name: $(BuildDefinitionName)_$(Date:yyyyMMdd)$(Rev:.rr)
 
 trigger:
-- master
+  - master
 
 pr:
-- master
+  - master
 
 schedules:
-- cron: "0 12 * * 0"
-  displayName: Weekly Sunday build
-  branches:
-    include:
-    - master
-  always: true
+  - cron: "0 12 * * 0"
+    displayName: Weekly Sunday build
+    branches:
+      include:
+        - master
+        - dev*
+    always: true
 
 jobs:
   - template: azure-template-tox-job.yml
-    parameters: {tox: 'format_pep8', python: '3.9', os: 'linux'}
+    parameters: { tox: "format_pep8", python: "3.9", os: "linux" }
   - template: azure-template-tox-job.yml
-    parameters: {tox: 'lint_pylint', python: '3.9', os: 'linux'}
+    parameters: { tox: "lint_pylint", python: "3.9", os: "linux" }
   - template: azure-template-tox-job.yml
-    parameters: {tox: 'test_coverage', python: '3.9', os: 'linux'}
+    parameters: { tox: "test_coverage", python: "3.9", os: "linux" }
     #
   - template: azure-template-tox-job.yml
-    parameters: {tox: 'py38', python: '3.9', os: 'linux'}
+    parameters: { tox: "py38", python: "3.9", os: "linux" }
   - template: azure-template-tox-job.yml
-    parameters: {tox: 'py27', python: '2.7', os: 'linux'}
+    parameters: { tox: "py27", python: "2.7", os: "linux" }
   #
   - template: azure-template-tox-job.yml
-    parameters: {tox: 'py38', python: '3.9', os: 'macos'}
+    parameters: { tox: "py38", python: "3.9", os: "macos" }
   - template: azure-template-tox-job.yml
-    parameters: {tox: 'py27', python: '2.7', os: 'macos'}
+    parameters: { tox: "py27", python: "2.7", os: "macos" }
   #
   - template: azure-template-publish-job.yml
-    parameters: {tox: 'py38', python: '3.9', os: 'macos'}
+    parameters: { tox: "py38", python: "3.9", os: "macos" }
   - template: azure-template-publish-job.yml
-    parameters: {tox: 'py38', python: '3.9', os: 'linux'}
+    parameters: { tox: "py38", python: "3.9", os: "linux" }
   #
   - template: azure-template-publish-job.yml
-    parameters: {tox: 'py27', python: '2.7', os: 'macos'}
+    parameters: { tox: "py27", python: "2.7", os: "macos" }
   - template: azure-template-publish-job.yml
-    parameters: {tox: 'py27', python: '2.7', os: 'linux'}
+    parameters: { tox: "py27", python: "2.7", os: "linux" }
   #
-
