Preserve column ordering for Py27

--- a/azure-template-publish-job.yml
+++ b/azure-template-publish-job.yml
@@ -2,7 +2,8 @@
 # Date: 8-Jul-2019 jdw split out from original pipeline
 #
 # Update:
-# 6-Aug-2019 jdw push source wheels (universal) for linux
+#  6-Aug-2019 jdw push source wheels (universal) for linux
+# 17-May-2021 jdw add
 #
 ##
 parameters:
