--- a/azure-template-publish-job.yml
+++ b/azure-template-publish-job.yml
@@ -65,5 +65,7 @@ jobs:
         displayName: "Install package dependencies"
       - script: pip install -r requirements-doc.txt
         displayName: "Install documentation dependencies"
+      - script: pip install -e .
+        displayName: "Install package locally"
       - script: mkdocs gh-deploy
         displayName: "Build and deploy documentation to GitHub pages"
