Further adjustments for documntation update

--- a/azure-template-publish-job.yml
+++ b/azure-template-publish-job.yml
@@ -30,8 +30,7 @@ jobs:
           addToPath: true
         displayName: setup python
       #
-      #- checkout: self
-      #  submodules: true
+
       #
       - download: current
         artifact: ${{ format('sw_{0}_{1}', parameters.tox,  parameters.os) }}
@@ -61,6 +60,9 @@ jobs:
             displayName: "Mac upload sdist and binary wheel to PyPi ..."
             continueOnError: true
       #
+      # Checkout and update documentation -
+      - checkout: self
+        submodules: true
       - script: pip install -r requirements.txt
         displayName: "Install package dependencies"
       - script: pip install -r requirements-doc.txt
