--- a/azure-template-publish-job.yml
+++ b/azure-template-publish-job.yml
@@ -32,6 +32,7 @@ jobs:
       #
       - checkout: self
         submodules: true
+        persistCredentials: true
       #
       - download: current
         artifact: ${{ format('sw_{0}_{1}', parameters.tox,  parameters.os) }}
@@ -68,5 +69,41 @@ jobs:
         displayName: "Install documentation dependencies"
       - script: pip install -e .
         displayName: "Install package locally"
-      - script: mkdocs gh-deploy
+      #
+      - script: |
+          git config --global user.email "$env:GH_EMAIL"
+          git config --global user.name "$env:GH_USER"
+          git config --global credential.helper store
+          echo https://$env:GH_TOKEN:x-oauth-basic@github.com>>~/.git-credentials
+          mkdocs gh-deploy
+        env:
+          GH_USER: $(GH_USER)
+          GH_EMAIL: $(GH_EMAIL)
+          GH_TOKEN: $(GH_TOKEN)
+          REPO_URL: $(BUILD_REPOSITORY_URI)
+        displayName: "Build and deploy documentation to GitHub pages"
+      #
+      - script: |
+          git config --global user.name "$env:GH_USER"
+          git config --global user.email "$env:GH_EMAIL"
+          echo "machine github.com login $env:GH_USER password $env:GH_TOKEN" > ~/.netrc
+          mkdocs gh-deploy
+        env:
+          GH_USER: $(GH_USER)
+          GH_EMAIL: $(GH_EMAIL)
+          GH_TOKEN: $(GH_TOKEN)
+          REPO_URL: $(BUILD_REPOSITORY_URI)
+        displayName: "Build and deploy documentation to GitHub pages"
+      #
+      - script: |
+          AUTH=$(echo -n ":$env:GH_TOKEN" | openssl base64 | tr -d '\n')
+          git config --global user.name "$env:GH_USER"
+          git config --global user.email "$env:GH_EMAIL"
+          git config --global http.$env:REPO_URL/.extraHeader "Authorization: Basic $AUTH"
+          mkdocs gh-deploy
+        env:
+          GH_USER: $(GH_USER)
+          GH_EMAIL: $(GH_EMAIL)
+          GH_TOKEN: $(GH_TOKEN)
+          REPO_URL: $(BUILD_REPOSITORY_URI)
         displayName: "Build and deploy documentation to GitHub pages"
